Add 'marquee-content" div, Add marquee animation.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,24 @@
 
         <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles/style.css">
 
     </head>
     <body>
+        <header>
+            <div class="promo-bar">
+                <div class="marquee-content">
+                    <a class="promo-bar-item"><span>MUJI membership</span></a>
+                    <a class="promo-bar-item"><span>SALE - Up to 50% off selected lines</span></a>
+                    <a class="promo-bar-item"><span>Holiday Extended Return Policy</span></a>
+                    <a class="promo-bar-item"><span>Refer-A-Friend-Rewards</span></a>
+                    <a class="promo-bar-item"><span>We ship to most EU countries, Switzerland & Norway</span></a>
+                </div>
+            </div>
 
+        </header>
+
+
+        </div>
     </body>
 </html>
