Add navigation with class "dropdown-menu" Add "dropdown-menu-top" and "drop-down-menu-list" <ul> elements.k

--- a/index.html
+++ b/index.html
@@ -40,11 +40,24 @@
                         <span id="line4" class="hamburger-line"></span>
                         </div>
                     </label>  
-                    <div class="overlay"></div>
+                    <div class="overlay"></div> 
                     <nav class="dropdown-menu">
                         <ul class="dropdown-menu-top">
-                            <li><a>Sign In</a></li>
-                            <li><a>Rest of Europe ($)</a></li>
+                            <li class="dropdown-item-centered"><a class="dropdown-action">Sign In</a></li>
+                            <li class="dropdown-divisory"></li>
+                            <li class="dropdown-item-centered"><a class="dropdown-action">Rest of Europe ($)</a></li>
+                        </ul>
+
+                        <ul class="dropdown-menu-list">
+                            <li class="dropdown-item"><a href ="https://www.muji.eu/sale" class="dropdown-action">Sale</a></li>
+                            <li class="dropdown-item"><a href ="https://www.muji.eu/women" class="dropdown-action">Women</a></li>
+                            <li class="dropdown-item"><a href ="https://www.muji.eu/men" class="dropdown-action">Men</a></li>
+                            <li class="dropdown-item"><a href ="https://www.muji.eu/home" class="dropdown-action">Homeware</a></li>
+                            <li class="dropdown-item"><a href ="https://www.muji.eu/furniture" class="dropdown-action">Furniture</a></li>
+                            <li class="dropdown-item"><a href ="https://www.muji.eu/stationery" class="dropdown-action">Stationery</a></li>
+                            <li class="dropdown-item"><a href ="https://www.muji.eu/beauty" class="dropdown-action">Beauty</a></li>
+                            <li class="dropdown-item"><a href ="https://www.muji.eu/travel" class="dropdown-action">Travel</a></li>
+                            <li class="dropdown-item"><a href ="https://www.muji.eu/gifts" class="dropdown-action">Gift Guide</a></li>                        
                         </ul>
                     </nav>
                     </button>
