Add div with class "sales-container" for showing all new MUJI promos.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
             <div class="header-search">
                 <div class="form-container">
- 
+                    <img id="search-svg" src="https://www.svgrepo.com/show/356535/search-button.svg"/>
                     <input id="search-input" class="transparent-block" placeholder="Search the store" autocomplete="off"/>
                 </div>                
             </div>
@@ -149,48 +149,92 @@
     </header>
 
     <main>
-        <div class="test-div">
-        <p>Bezveze</p>
-            <p>Bezveze</p>
-                <p>Bezveze</p>
-                    <p>Bezveze</p>
-                        <p>Bezveze</p>
-                            <p>Bezveze</p>
-                                <p>Bezveze</p>
-            <p>Bezveze</p>
-                <p>Bezveze</p>
-                    <p>Bezveze</p>
-                        <p>Bezveze</p>
-                            <p>Bezveze</p>
-                                <p>Bezveze</p>
-            <p>Bezveze</p>
-                <p>Bezveze</p>
-                    <p>Bezveze</p>
-                        <p>Bezveze</p>
-                            <p>Bezveze</p>
-                                <p>Bezveze</p>
-            <p>Bezveze</p>
-                <p>Bezveze</p>
-                    <p>Bezveze</p>
-                        <p>Bezveze</p>
-                            <p>Bezveze</p>
+        <div class="sales-container">
+            <div class="sales-text-container">
+                <h3 class="sales-title-text">SALE</h3>
+                <p class="sales-subtitle-text">Up to</p>
+                <h3 class="sales-title-text-large">50 % off</h3>
+                <h4 class="sales-title-text">Selected lines</h4>
+                <h4 id="new-lines-added-text" class="sales-title-text">New lines added</h4>
+            </div>
 
-            <p>Bezveze</p>
-                <p>Bezveze</p>
-                    <p>Bezveze</p>
-                        <p>Bezveze</p>
-                            <p>Bezveze</p>
-            <p>Bezveze</p>
-                <p>Bezveze</p>
-                    <p>Bezveze</p>
-                        <p>Bezveze</p>
-                            <p>Bezveze</p>
-            <p>Bezveze</p>
-                <p>Bezveze</p>
-                    <p>Bezveze</p>
-                        <p>Bezveze</p>
-                            <p>Bezveze</p>
+            <div class="promo-gallery">
+                <a class="promo-card" href="https://www.muji.eu/sale/markdown/women">
+                    <img src="https://cdn11.bigcommerce.com/s-4b0oh2xvlj/images/stencil/original/image-manager/25aw-eoss-women-864x1080-.jpg?t=1765281582" alt="Women's Jacket"/>
+                    <p>Women</p>
+                </a>
+                <a class="promo-card" href="https://www.muji.eu/sale/markdown/men">
+                    <img src="https://cdn11.bigcommerce.com/s-4b0oh2xvlj/images/stencil/original/image-manager/25aw-eoss-men-864x1080-.jpg?t=1765280084" alt="Men's Jacket"/>
+                </a>
+
+                <a class="promo-card" href="https://www.muji.eu/sale/markdown/home">
+                    <img src="https://cdn11.bigcommerce.com/s-4b0oh2xvlj/images/stencil/original/image-manager/25aw-eoss-home-864x1080-.jpg?t=1765281471" alt="Home Bed"/>
+                </a>
+            </div>
         </div>
+        </div>
+
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+        <p>Bezveze</p>
+        <p>Bezveze</p>
+        <p>Bezveze</p>        
+
 
     </main>
 
