Add @media rule for screens with width higher than 765px.
This rule updates "sales-container" class styling.

--- a/index.html
+++ b/index.html
@@ -165,10 +165,12 @@
                 </a>
                 <a class="promo-card" href="https://www.muji.eu/sale/markdown/men">
                     <img src="https://cdn11.bigcommerce.com/s-4b0oh2xvlj/images/stencil/original/image-manager/25aw-eoss-men-864x1080-.jpg?t=1765280084" alt="Men's Jacket"/>
+                    <p>Men</p>
                 </a>
 
                 <a class="promo-card" href="https://www.muji.eu/sale/markdown/home">
                     <img src="https://cdn11.bigcommerce.com/s-4b0oh2xvlj/images/stencil/original/image-manager/25aw-eoss-home-864x1080-.jpg?t=1765281471" alt="Home Bed"/>
+                    <p>Home</p>
                 </a>
             </div>
         </div>
