Update "hero-container" sytling for desktop display

--- a/index.html
+++ b/index.html
@@ -254,24 +254,38 @@
 
         <div class="hero-container">
                 <div class="hero-inner">
-                    <img class="active" src="https://cdn11.bigcommerce.com/s-4b0oh2xvlj/images/stencil/original/image-manager/25aw-winter-essentials-main-864x1296-.jpg?t=1765465111">
-                    <img src="https://cdn11.bigcommerce.com/s-4b0oh2xvlj/images/stencil/original/image-manager/26ss-hasami-tableware-864x1296-01.jpg?t=1768234144"/>
-                    <div class="hero-slide-text">
-                        <h2>Winter essentials</h2>
-                        <a href="https://www.muji.eu/women/essentials">
-                            <strong>Women</strong>
-                        </a>    
-                        <a href="https://www.muji.eu/men/essentials">
-                            <strong>Men</strong>
-                        </a>                                                 
-                    </div>  
-                    <div class="hero-slide-text">
-                        <h2>Hasami porcelain</h2>
-                        <a href="https://www.muji.eu/home/cooking-and-dining/tableware">
-                            <strong>Explore The Collection</strong>
-                        </a>                            
-                    </div>                                           
-                </div>
+                    <div class="hero-inner-slider">
+                            <img class="active mobile" src="https://cdn11.bigcommerce.com/s-4b0oh2xvlj/images/stencil/original/image-manager/25aw-winter-essentials-main-864x1296-.jpg?t=1765465111">
+                            <img class="mobile" src="https://cdn11.bigcommerce.com/s-4b0oh2xvlj/images/stencil/original/image-manager/26ss-hasami-tableware-864x1296-01.jpg?t=1768234144"/>
+
+                            <img class="active desktop"  src="https://cdn11.bigcommerce.com/s-4b0oh2xvlj/images/stencil/original/image-manager/25aw-winter-essentials-main-1920x912.jpg?t=1765465135"/>
+                            <img class="desktop" src="https://cdn11.bigcommerce.com/s-4b0oh2xvlj/images/stencil/original/image-manager/26ss-hasami-tableware-1920x912-01.jpg?t=1768234142"/>                            
+
+                            <div class="active hero-slide-text">
+                                <h2>Winter essentials</h2>
+                                <div class="link-wrapper">
+                                    <a href="https://www.muji.eu/women/essentials">
+                                        <strong>Women</strong>
+                                    </a>    
+                                    <a href="https://www.muji.eu/men/essentials">
+                                        <strong>Men</strong>
+                                    </a>     
+                                </div>
+                                            
+                            </div>
+
+                            <div class="hero-slide-text">
+                                <h2>Hasami porcelain</h2>
+                                <a href="https://www.muji.eu/home/cooking-and-dining/tableware">
+                                    <strong>Explore The Collection</strong>
+                                </a>                            
+                            </div>   
+                        </div>
+                        <div class="slide-indicator">
+                            <span class="active">01</span>
+                            <span>02</span>
+                        </div>                           
+                    </div>
         </div>            
 
         <div style="height:100vw"></div>
