Add "footer-section" div for footer articles.

--- a/index.html
+++ b/index.html
@@ -590,10 +590,134 @@
             </div>
         </div>
         </div>        
-
-
     </main>
 
+    <footer>
+        <section class="footer-section">
+            <article>
+                <div class="footer-div">
+                    <h4>Shopping with MUJI</h4>
+                    <ul>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/store-locator.html">Store Locator</a>
+                        </li>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/size-chart.html">Size Chart</a>
+                        </li>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/refer-a-friend.html">Refer A Friend</a>
+                        </li>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/re-muji.html">ReMUJI Upcycling Collection</a>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="footer-div">
+                    <h4>Customer Service</h4>
+                    <ul>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/frequently-asked-questions/delivery-questions.html">Delivery</a>
+                        </li>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/frequently-asked-questions/returns-refunds.html">Returns & Refunds</a>
+                        </li>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/contact-us.html">Contact Us</a>
+                        </li>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/gift-cards.html">Gift Cards</a>
+                        </li>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/frequently-asked-questions.html">FAQs</a>
+                        </li>                        
+                        <li>
+                            <a class="link-no-underline" href="http://manage.kmail-lists.com/subscriptions/unsubscribe?cy=Yr3aJY">Unsubscribe from MUJImail</a>
+                        </li>   
+                    </ul>
+                </div>
+                
+                <div class="footer-div">
+                    <h4>About Us</h4>
+                    <ul>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/about-muji.html">About MUJI</a>
+                        </li>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/muji-materials.html">MUJI Materials</a>
+                        </li>
+                        <li>
+                            <a class="link-no-underline" href="https://www.mujicareers.eu//index.muji?lan=UK&cry=DE">Careers at MUJI</a>
+                        </li>
+                        <li>
+                            <a class="link-no-underline" href="https://api.muji.eu/mol/dtr.muji?qlan=eu">Data Access Request</a>
+                        </li>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/privacy-policy.html">Privacy Policy</a>
+                        </li>                        
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/terms-and-conditions.html">Terms & Conditions</a>
+                        </li>   
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/cookies-policy.html">Cookies Policy</a>
+                        </li>  
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/accessibility-statement.html">Accessibility Statement</a>
+                        </li>  
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/fake-muji-sites.html">Statement about Fake MUJI Sites</a>
+                        </li>                                                                          
+                    </ul>                   
+                </div>      
+                
+                <div class="footer-div">
+                    <h4>Sustainability</h4>
+                    <ul>
+                        <li>
+                            <a class="link-no-underline" href="https://www.muji.eu/pages/sustainability.html">Our Philosophy is based on the Japanese tradition of form, function and simplicity.</a>
+                        </li>                                                                     
+                    </ul> 
+                </div>   
+
+                <div class="footer-div">
+                    <h4>Find Us On Social Media</h4>
+                    <ul>
+                        <li>
+                            <a class="link-no-underline" href="https://www.instagram.com/mujieurope/">Instagram</a>
+                        </li>                                                                     
+                    </ul> 
+                </div>                     
+            </article>
+
+            <article>
+                <div class="footer-div">
+                    <h4>MUJI Membership</h4>
+
+                    <p>Become a MUJI Member and receive €10 off your first online purchase.(Only valid with online orders over €50, excluding shipping)</p>
+
+                    <form>
+                        <div class="input-wrapper">
+                        <input type="email" placeholder="Enter your email"/>
+                        <button type="submit">
+                            <img src="https://www.svgrepo.com/show/442470/chevron-right.svg"/>
+                        </button>
+                        </div>
+                    </form>
+                </div>                
+            </article>
+        </section>
+
+        <div class="footer-logo-section">
+            <div class="line"></div>
+            <div class="footer-logo-container">
+                    <img  src="https://cdn11.bigcommerce.com/s-36unquhwg5/stencil/e694ebc0-be15-013e-5bca-1ef4e2705301/img/logos/logo-gray.svg"/>
+                    <p>MUJI EU - Ryohin Keikaku Europe Ltd 2026</p>
+            </div>
+
+        </div>
+
+    </footer>
     </body>
 
 </html>
